# Audio-Analysis-Tesis

./: .gitignore  TTS_samples_per_den.py  compare_objetive_vs_likelihood.py  comparison_ITW_vs_prof.py  composite_metrics_calculation.py  composite_metrics_graphs.py  compute_likelihood_stats.py  data.py  data_computed_datasets.py  data_likelihood.py  data_mos.py  data_profesional.py  evaluate_TTS_MOS_likelihood.py  evaluate_TTS_samples.py  generate_TTS_samples.py  graph_likelihood.py  individual_metrics_graphs.py  individual_metrics_percentage.py  pyproject.toml  quick_test.py  spectrogram_comparison.py
notebooks_TTS_infer/: F5TTS_Voice_Cloning.ipynb  QwenTTS_Voice_Cloning.ipynb  XTTS_Voice_Cloning.ipynb
