[tool.poetry]
name = "archivoz-graphs"
version = "0.1.0"
description = "Audio metrics and graph generation for speech analysis"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# Core ML and Audio
tensorflow = "2.16.1"
tensorflow-intel = "2.16.1"
keras = "3.10.0"
tensorboard = "2.16.2"
tensorboard-data-server = "0.7.2"
# Numerical computing
numpy = "1.26.4"
scipy = "1.15.3"
numba = "0.61.2"
numexpr = "2.11.0"
pandas = "2.3.0"
# Audio processing
librosa = "0.11.0"
sounddevice = "0.5.2"
soundfile = "0.13.1"
resampy = "0.4.3"
soxr = "0.5.0.post1"
audioread = "3.0.1"
# ML and data processing
scikit-learn = "1.7.0"
joblib = "1.5.1"
# File I/O
openpyxl = "3.1.5"
tables = "3.10.2"
et-xmlfile = "2.0.0"
h5py = "3.14.0"
# Visualization and plotting
matplotlib = "3.10.3"
seaborn = "0.13.2"
contourpy = "1.3.2"
fonttools = "4.58.4"
kiwisolver = "1.4.8"
cycler = "0.12.1"
pillow = "11.2.1"
# Progress and logging
progress = "1.6"
tqdm = "4.67.1"
colorednoise = "2.1.0"
# Utilities
requests = "2.32.4"
urllib3 = "2.4.0"
certifi = "2025.4.26"
charset-normalizer = "3.4.2"
idna = "3.10"
# ML frameworks
absl-py = "2.3.0"
astunparse = "1.6.3"
gast = "0.6.0"
flatbuffers = "25.2.10"
opt-einsum = "3.4.0"
optree = "0.16.0"
ml-dtypes = "0.3.2"
protobuf = "4.25.8"
grpcio = "1.73.0"
# Development and typing
typing-extensions = "4.14.0"
# System utilities
pygments = "2.19.1"
rich = "14.0.0"
termcolor = "3.1.0"
wrapt = "1.17.2"
threadpoolctl = "3.6.0"
werkzeug = "3.1.3"
markdown = "3.8"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
# Custom and additional
pesto-pitch = "*"
pymcd = "*"
pyroomacoustics = "*"
# Additional utilities from ReverbNet
blosc2 = "3.5.0"
cffi = "1.17.1"
google-pasta = "0.2.0"
libclang = "18.1.1"
llvmlite = "0.44.0"
lazy-loader = "0.4"
msgpack = "1.1.1"
namex = "0.1.0"
ndindex = "1.10.0"
pooch = "1.8.2"
py-cpuinfo = "9.0.0"
pycparser = "2.22"
pyparsing = "3.2.3"
pytz = "2025.2"
tzdata = "2025.2"   